--- a/index.html
+++ b/index.html
@@ -280,13 +280,13 @@
                 <div class="col-md-4">
                     <form id="suscribeForm" action="#" post="POST">
                         <h4 class="text-uppercase">
-                            ¿Quieres recibir todas las novedades?
+                            información
                         </h4>
-                        <div class="form-group">
-                            <input type="email" id="email" name="email" class="form-control" placeholder="tucorreo@gmail.com">
-                            <small class="form-text text-muted">No compartiremos tu información con nadie mas</small>
-                            <button type="submit" class="btn btn-primary form-text">Subscribirme</button>
-                        </div>
+                        <p class="lead">
+                            Vivamus sagittis lacus vel augue laoreet rutrum faucibus dolor auctor.
+                             Duis mollis, est non commodo luctus.Lorem Ipsum es simplemente el texto de relleno de las imprentas y archivos de texto. 
+                             Lorem Ipsum ha sido el texto de relleno estándar de las industrias desde el año 1500, 
+                          </p>
                     </form>
                 </div>
                 <div class="col-md-3 offset-md-5">
