--- a/index.html
+++ b/index.html
@@ -44,7 +44,7 @@
                 <div class="col-2">
                     <img src="img/brDeporte.png" class="img-rounded" alt="Cinque Terre" width="60" height="40">
                 </div>
-                <div class="col-md-7 col-5 columna">
+                <div class="col-md-7 col-7 columna">
                     <form>
                         <div class="input-group">
                             <input type="text" class="form-control" placeholder="¿Encontró lo que buscaba?">
@@ -56,7 +56,7 @@
                         </div>
                     </form>
                 </div>
-                <div class="col-md-3 col-5 columna">
+                <div class="col-3 columna">
                     <ul class="nav">
                         <li class="nav-item">
                             <a class="nav-link" href="#">+56912345678</a>
@@ -85,6 +85,9 @@
                         </li>
                         <li class="nav-item">
                             <a class="nav-link text-center" href="#">Quienes Somos</a>
+                        </li>
+                        <li class="nav-item">
+                            <a class="nav-link text-center" href="#">Contacto</a>
                         </li>
                     </ul>
                 </div>
@@ -275,9 +278,9 @@
     <!--</section>-->
     <!-- footer -->
     <div id="footer-container">
-        <div class="container">
+        <div class="container-fluid">
             <div class="row text-center text-md-left">
-                <div class="col-md-4">
+                <div class="col-md-5">
                     <form id="suscribeForm" action="#" post="POST">
                         <h4 class="text-uppercase">
                             información
@@ -289,23 +292,37 @@
                           </p>
                     </form>
                 </div>
-                <div class="col-md-3 offset-md-5">
-                    <h4>Navegación</h4>
+                <div class="col-md-2 text-center">
+                    <h4>Redes Sociales</h4>
+                    <ul class="navbar-nav ">
+                        <li class="nav-item">
+                            <a class="nav-link " href="#"><i class="fab fa-instagram"></i></a>
+                        </li>
+                        <li class="nav-item">
+                            <a class="nav-link" href="#"><i class="fab fa-facebook"></i></a>
+                        </li>
+                        <li class="nav-item">
+                            <a class="nav-link" href="#"><i class="fab fa-youtube"></i></a>
+                        </li>
+                    </ul>
+                </div>
+                <div class="col-md-4 ">
+                    <h4>Información de Contacto</h4>
                     <ul class="navbar-nav">
                         <li class="nav-item">
-                            <a href="index.html" class="nav-link">Home</a>
+                            <i class="fas fa-map-marker-alt"></i>
+                            <strong>Dirección:</strong>
+                            <span>Perico los palotes 1234, Santiago.</span>
                         </li>
                         <li class="nav-item">
-                            <a href="catalogo.html" class="nav-link">Catálogo</a>
+                            <i class="fas fa-phone"></i>
+                            <strong>Fono:</strong>
+                            <span>+56 9 12345678</span>
                         </li>
                         <li class="nav-item">
-                            <a href="#" class="nav-link">Carrito</a>
-                        </li>
-                        <li class="nav-item">
-                            <a href="#" class="nav-link">Login</a>
-                        </li>
-                        <li class="nav-item">
-                            <a href="#" class="nav-link">Contacto</a>
+                            <i class="fas fa-envelope"></i>
+                            <strong>Email:</strong>
+                            <span>brdeportes@gmail.com</span>
                         </li>
                     </ul>
                 </div>
