--- a/contacto.html
+++ b/contacto.html
@@ -86,7 +86,7 @@
                            <a class="nav-link text-center" href="#">Quienes Somos</a>
                         </li>
                         <li class="nav-item">
-                           <a class="nav-link text-center" href="#">Contacto</a>
+                           <a class="nav-link text-center" href="contacto.html">Contacto</a>
                         </li>
                      </ul>
                   </div>
