--- a/contacto.html
+++ b/contacto.html
@@ -48,16 +48,16 @@
                      <div class="input-group">
                         <input type="text" class="form-control" placeholder="¿Encontró lo que buscaba?">
                         <span class="input-group-btn">
-                        <button class="btn btn-platzi" type="button"><span id="buscar" class="d-md-block d-none">Buscar</span>
-                        <i class="fa fa-search d-block d-md-none"></i>  
-                        </button>
+                            <button class="btn btn-platzi" type="button"><span id="buscar" class="d-md-block d-none">Buscar</span>
+                            <i class="fa fa-search d-block d-md-none"></i>  
+                            </button>
                         </span>
                      </div>
                   </form>
                </div>
-               <div class="col-3 columna">
+               <div class="col-2 columna text-left">
                   <ul class="nav">
-                     <li class="nav-item">
+                     <li class="nav-item ">
                         <a class="nav-link" href="#">+56912345678</a>
                      </li>
                   </ul>
