--- a/index.html
+++ b/index.html
@@ -56,12 +56,8 @@
                         </div>
                     </form>
                 </div>
-                <div class="col-3 columna">
-                    <ul class="nav">
-                        <li class="nav-item">
-                            <a class="nav-link" href="#">+56912345678</a>
-                        </li>
-                    </ul>
+                <div class="col-3 columna justify-content-start">
+                    <a class="nav-link" href="#">+56912345678</a>
                 </div>
             </div>
         </div>
